force-app/main/default/objects/df_journal_dk__c/fields/hvilken_type_gld_er_der_tale_om__c.field-meta.xml
<CustomField>
    <fullName>hvilken_type_gld_er_der_tale_om__c</fullName>
    <label>Hvilken type gæld er der tale om c87d7</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>studiegld</fullName>
                <label>Studiegæld (SU-lån)</label>
            </value>
            <value>
                <fullName>gld_til_forldre</fullName>
                <label>Gæld til forældre</label>
            </value>
            <value>
                <fullName>spillegld</fullName>
                <label>Spillegæld</label>
            </value>
            <value>
                <fullName>virksomhedsgld</fullName>
                <label>Virksomhedsgæld</label>
            </value>
            <value>
                <fullName>forbrugsln</fullName>
                <label>Forbrugslån</label>
            </value>
            <value>
                <fullName>andet_type_gld</fullName>
                <label>Andet (beskriv selv)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>