force-app/main/default/objects/df_journal_dk__c/fields/hvilken_type_gld_skal_vre_sreje__c.field-meta.xml
<CustomField>
    <fullName>hvilken_type_gld_skal_vre_sreje__c</fullName>
    <label>Hvilken type gæld skal være sære 46514</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>gld_fra_fr_gteskab</fullName>
                <label>Kun gæld fra før vi blev gift</label>
            </value>
            <value>
                <fullName>alt_gld_fr_og_efter</fullName>
                <label>Alt gæld (Både fra før og efter ægteskabsindgåelsen)</label>
            </value>
            <value>
                <fullName>kun_specifik_gld</fullName>
                <label>Kun specifik gæld</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>