force-app/main/default/objects/df_journal_dk__c/fields/hvilket_rstal_flyttede_i_sammen__c.field-meta.xml
<CustomField>
    <fullName>hvilket_rstal_flyttede_i_sammen__c</fullName>
    <label>Hvilket årstal flyttede I sammen ca20d</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>