force-app/main/default/objects/df_journal_dk__c/fields/hvor_mange_procent_skal_srejet_a_101__c.field-meta.xml
<CustomField>
    <fullName>hvor_mange_procent_skal_srejet_a_101__c</fullName>
    <label>Hvor mange procent skal særejet  8ef31</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>