force-app/main/default/objects/df_journal_dk__c/fields/hvor_meget_har_person_1_fornavn_85__c.field-meta.xml
<CustomField>
    <fullName>hvor_meget_har_person_1_fornavn_85__c</fullName>
    <description>Indtastes som f.eks. &quot;300.000&quot;</description>
    <label>Hvor meget har {person_1_first_n cab89</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>