force-app/main/default/objects/df_journal_dk__c/fields/hvor_meget_har_person_2_fornavn_84__c.field-meta.xml
<CustomField>
    <fullName>hvor_meget_har_person_2_fornavn_84__c</fullName>
    <description>Indtastes som f.eks. &quot;300.000&quot;</description>
    <label>Hvor meget har {person_2_first_n f9b38</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>