force-app/main/default/objects/df_journal_dk__c/fields/hvor_meget_skal_vre_omfattet_af_95__c.field-meta.xml
<CustomField>
    <fullName>hvor_meget_skal_vre_omfattet_af_95__c</fullName>
    <label>Hvor meget skal være omfattet af f338f</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>alt_skal_omfattes_gtepagt</fullName>
                <label>Alt skal omfattes</label>
            </value>
            <value>
                <fullName>kun_hvad_vi_ejede_fr_gteskabet_skal_omfattes_gtepagt</fullName>
                <label>Kun hvad vi ejede før ægteskabet skal omfattes</label>
            </value>
            <value>
                <fullName>kun_specifikke_ejendel_eller_belb_skal_omfattes_gtepagt</fullName>
                <label>Kun specifikke ejendele eller beløb skal omfattes</label>
            </value>
            <value>
                <fullName>gtepagt_specif_aktiver</fullName>
                <label>Specifikke aktiver</label>
            </value>
            <value>
                <fullName>omfattes_bestemt_andel_brker</fullName>
                <label>En bestemt andel skal omfattes</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>