force-app/main/default/objects/df_journal_dk__c/fields/hvordan_er_fordelingen_af_betali_87__c.field-meta.xml
<CustomField>
    <fullName>hvordan_er_fordelingen_af_betali_87__c</fullName>
    <label>Hvordan er fordelingen af betali 3e1b3</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>betalt_lige_meget_samejeoverenskomst</fullName>
                <label>Der er betalt lige meget</label>
            </value>
            <value>
                <fullName>person_1_har_betalt_mest_samejeoverenskomst_rettet</fullName>
                <label>{person_1_first_name} har betalt mest</label>
            </value>
            <value>
                <fullName>person_2_har_betalt_mest_samejeoverenskomst_rettet</fullName>
                <label>{person_2_first_name} har betalt mest</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>