force-app/main/default/objects/df_journal_dk__c/fields/i_hvilken_retskreds_er_testament_41__c.field-meta.xml
<CustomField>
    <fullName>i_hvilken_retskreds_er_testament_41__c</fullName>
    <label>I hvilken retskreds, er testamen 7400e</label>
    <length>255</length>
    <type>Text</type>
</CustomField>