force-app/main/default/objects/df_journal_dk__c/fields/include_childs_will__c.field-meta.xml
<CustomField>
    <fullName>include_childs_will__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Gælder kun ved mindreårige børn</description>
    <label>Skal der indsættes børnetestamen 46e02</label>
    <type>Checkbox</type>
</CustomField>