force-app/main/default/objects/df_journal_dk__c/fields/include_future_children__c.field-meta.xml
<CustomField>
    <fullName>include_future_children__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Inkludér fremtidige børn i testamentet?</description>
    <label>Skal der tages højde for fremtid 02720</label>
    <type>Checkbox</type>
</CustomField>