force-app/main/default/objects/df_journal_dk__c/fields/include_genstandslegat__c.field-meta.xml
<CustomField>
    <fullName>include_genstandslegat__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Hvis der er genstande, ting eller objekter som skal testamenteres</description>
    <label>Skal der indsættes genstandslega fdd43</label>
    <type>Checkbox</type>
</CustomField>