force-app/main/default/objects/df_journal_dk__c/fields/include_sumlegat__c.field-meta.xml
<CustomField>
    <fullName>include_sumlegat__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Hvis en specifik sum (beløb) skal videregives</description>
    <label>Skal der indsættes sumlegat?</label>
    <type>Checkbox</type>
</CustomField>