force-app/main/default/objects/df_journal_dk__c/fields/include_unwanted_guardian__c.field-meta.xml
<CustomField>
    <fullName>include_unwanted_guardian__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Skal der indsættes en uønsket værge?</description>
    <label>Skal der indsættes en uønsket væ b6410</label>
    <type>Checkbox</type>
</CustomField>