force-app/main/default/objects/df_journal_dk__c/fields/inherit_as_seperate_property__c.field-meta.xml
<CustomField>
    <fullName>inherit_as_seperate_property__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Arven videregives efter særejeregler</description>
    <label>Skal arven gives videre som sære a3441</label>
    <type>Checkbox</type>
</CustomField>