force-app/main/default/objects/df_journal_dk__c/fields/inheritance_from_first_deceased__c.field-meta.xml
<CustomField>
    <fullName>inheritance_from_first_deceased__c</fullName>
    <description>Vælg arvefordeling efter førsteafdøde</description>
    <label>Vælg arvefordeling efter førstea c9922</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>full_beneficiary_partner</fullName>
                <label>Fuld begunstigelse partner</label>
            </value>
            <value>
                <fullName>percentage_distribution</fullName>
                <label>Procent fordeling</label>
            </value>
            <value>
                <fullName>full_beneficiary_children</fullName>
                <label>Fuld begunstigelse børn</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>