force-app/main/default/objects/df_journal_dk__c/fields/inheritance_from_the_longest_liv_22__c.field-meta.xml
<CustomField>
    <fullName>inheritance_from_the_longest_liv_22__c</fullName>
    <description>Vælg arvefordeling efter længstlevende</description>
    <label>Vælg arvefordeling efter længstl 99831</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>inheritance_by_branch</fullName>
                <label>Arv efter gren</label>
            </value>
            <value>
                <fullName>equal_sharing</fullName>
                <label>Ligedeling mellem børn</label>
            </value>
            <value>
                <fullName>30_pct_solution</fullName>
                <label>30% løsning</label>
            </value>
            <value>
                <fullName>percentage_distribution</fullName>
                <label>Procent fordeling</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>