force-app/main/default/objects/df_journal_dk__c/fields/insert_special_escrow_conditions__c.field-meta.xml
<CustomField>
    <fullName>insert_special_escrow_conditions__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Skal er indsættes særlige betingelser i båndlæggelsestiden?</description>
    <label>Skal er indsættes særlige beting 1cd95</label>
    <type>Checkbox</type>
</CustomField>