force-app/main/default/objects/df_journal_dk__c/fields/internal_notes_child_will__c.field-meta.xml
<CustomField>
    <fullName>internal_notes_child_will__c</fullName>
    <description>Interne noter vedr. børnetestamente</description>
    <label>Interne noter</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>