force-app/main/default/objects/df_journal_dk__c/fields/internal_notes_cohabiting__c.field-meta.xml
<CustomField>
    <fullName>internal_notes_cohabiting__c</fullName>
    <description>Interne noter vedr. samlevende</description>
    <label>Interne noter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>