force-app/main/default/objects/df_journal_dk__c/fields/internal_notes_future_power_of_a_111__c.field-meta.xml
<CustomField>
    <fullName>internal_notes_future_power_of_a_111__c</fullName>
    <description>Interne noter vedr. fremtidsfuldmagt</description>
    <label>Interne noter 2dbaf</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>