force-app/main/default/objects/df_journal_dk__c/fields/internal_notes_marriage__c.field-meta.xml
<CustomField>
    <fullName>internal_notes_marriage__c</fullName>
    <description>Interne noter vedr. ægteskab</description>
    <label>Interne noter (Ægteskab)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>