force-app/main/default/objects/df_journal_dk__c/fields/interne_noter_fremtidsfuldmagt_p_1__c.field-meta.xml
<CustomField>
    <fullName>interne_noter_fremtidsfuldmagt_p_1__c</fullName>
    <label>Interne noter (Fremtidsfuldmagt  26a7a</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>