force-app/main/default/objects/df_journal_dk__c/fields/journal_name__c.field-meta.xml
<CustomField>
    <fullName>journal_name__c</fullName>
    <description>Journal Name</description>
    <label>Journal name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>