force-app/main/default/objects/df_journal_dk__c/fields/JournalName__c.field-meta.xml
<CustomField>
    <fullName>JournalName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Journal Name</label>
    <referenceTo>Journal__c</referenceTo>
    <relationshipLabel>Journal DKs (Journal Name)</relationshipLabel>
    <relationshipName>Journal_DKs</relationshipName>
    <type>Lookup</type>
</CustomField>