force-app/main/default/objects/df_journal_dk__c/fields/konomiske_forhold_person_2__c.field-meta.xml
<CustomField>
    <fullName>konomiske_forhold_person_2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Økonomiske forhold</label>
    <type>Checkbox</type>
</CustomField>