force-app/main/default/objects/df_journal_dk__c/fields/kontant_udbetaling_samejeoverens_83__c.field-meta.xml
<CustomField>
    <fullName>kontant_udbetaling_samejeoverens_83__c</fullName>
    <description>Indtastes som f.eks. &quot;600.000&quot;</description>
    <label>Kontant udbetaling 63dd0</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>