force-app/main/default/objects/df_journal_dk__c/fields/ligedeling_mellem_brn_efter_lngs_50__c.field-meta.xml
<CustomField>
    <fullName>ligedeling_mellem_brn_efter_lngs_50__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ligedeling mellem børn efter læn 73927</label>
    <type>Checkbox</type>
</CustomField>