force-app/main/default/objects/df_journal_dk__c/fields/ligedeling_mellem_brn_single__c.field-meta.xml
<CustomField>
    <fullName>ligedeling_mellem_brn_single__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ligedeling mellem børn (Single)</label>
    <type>Checkbox</type>
</CustomField>