force-app/main/default/objects/df_journal_dk__c/fields/marital_status__c.field-meta.xml
<CustomField>
    <fullName>marital_status__c</fullName>
    <description>Gift, samlevende eller single</description>
    <label>Civilstatus</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>cohabiting</fullName>
                <label>Samlevende</label>
            </value>
            <value>
                <fullName>married</fullName>
                <label>Gift</label>
            </value>
            <value>
                <fullName>single</fullName>
                <label>Enlig</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>