force-app/main/default/objects/df_journal_dk__c/fields/med_alt_hvad_der_p_nuvrende_og_f_89__c.field-meta.xml
<CustomField>
    <fullName>med_alt_hvad_der_p_nuvrende_og_f_89__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Med alt hvad der på nuværende og e1795</label>
    <type>Checkbox</type>
</CustomField>