force-app/main/default/objects/df_journal_dk__c/fields/med_deling_af_pensioner_gtepagt__c.field-meta.xml
<CustomField>
    <fullName>med_deling_af_pensioner_gtepagt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Med deling af pensioner</label>
    <type>Checkbox</type>
</CustomField>