force-app/main/default/objects/df_journal_dk__c/fields/med_hvem_er_det_tidligere_testam_109__c.field-meta.xml
<CustomField>
    <fullName>med_hvem_er_det_tidligere_testam_109__c</fullName>
    <label>Med hvem er det tidligere testam 6981e</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>tidl_testamente_sammen</fullName>
                <label>Oprettet sammen</label>
            </value>
            <value>
                <fullName>tidl_testamente_p1</fullName>
                <label>{person_1_first_name} {person_1_last_name} har oprettet testamentet</label>
            </value>
            <value>
                <fullName>tidl_testamente_p2</fullName>
                <label>{person_2_first_name} {person_2_last_name} har oprettet testamentet</label>
            </value>
            <value>
                <fullName>tidl_testamente_p1_tidl</fullName>
                <label>{person_1_first_name} {person_1_last_name} har oprettet med tidl. partner</label>
            </value>
            <value>
                <fullName>tidl_testamente_p2_tidl</fullName>
                <label>{person_2_first_name} {person_2_last_name} har oprettet med tidl. partner</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>