force-app/main/default/objects/df_journal_dk__c/fields/med_ndring_af_sreje_til_kombinat_91__c.field-meta.xml
<CustomField>
    <fullName>med_ndring_af_sreje_til_kombinat_91__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Med ændring af særeje til kombin 00416</label>
    <type>Checkbox</type>
</CustomField>