force-app/main/default/objects/df_journal_dk__c/fields/med_ophvelse_af_gtepagt_gtepagt__c.field-meta.xml
<CustomField>
    <fullName>med_ophvelse_af_gtepagt_gtepagt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Med ophævelse af eksisterende æg eb2a0</label>
    <type>Checkbox</type>
</CustomField>