force-app/main/default/objects/df_journal_dk__c/fields/med_specificerede_genstande_gtep_88__c.field-meta.xml
<CustomField>
    <fullName>med_specificerede_genstande_gtep_88__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Med specificerede genstande 1e351</label>
    <type>Checkbox</type>
</CustomField>