force-app/main/default/objects/df_journal_dk__c/fields/med_sumsreje_gtepagt__c.field-meta.xml
<CustomField>
    <fullName>med_sumsreje_gtepagt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Med sumsæreje</label>
    <type>Checkbox</type>
</CustomField>