force-app/main/default/objects/df_journal_dk__c/fields/mnedligt_belb_amount__c.field-meta.xml
<CustomField>
    <fullName>mnedligt_belb_amount__c</fullName>
    <label>Månedligt beløb</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>