force-app/main/default/objects/df_journal_dk__c/fields/noter_specifik_genstand_belb__c.field-meta.xml
<CustomField>
    <fullName>noter_specifik_genstand_belb__c</fullName>
    <label>Notér her specifikke genstande o c6c24</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>