force-app/main/default/objects/df_journal_dk__c/fields/noter_til_arvefordelingen_par__c.field-meta.xml
<CustomField>
    <fullName>noter_til_arvefordelingen_par__c</fullName>
    <label>Noter til arvefordelingen</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>