force-app/main/default/objects/df_journal_dk__c/fields/notr_vilkr_for_ophvelse_af_sreje__c.field-meta.xml
<CustomField>
    <fullName>notr_vilkr_for_ophvelse_af_sreje__c</fullName>
    <label>Notér vilkår for ophævelse af sæ eafee</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>