force-app/main/default/objects/df_journal_dk__c/fields/nsker_medlemskab_person_1__c.field-meta.xml
<CustomField>
    <fullName>nsker_medlemskab_person_1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ønsker medlemskab</label>
    <type>Checkbox</type>
</CustomField>