force-app/main/default/objects/df_journal_dk__c/fields/nskes_der_gravstedsvedligeholdel_73__c.field-meta.xml
<CustomField>
    <fullName>nskes_der_gravstedsvedligeholdel_73__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ønskes der gravstedsvedligeholde a44d6</label>
    <type>Checkbox</type>
</CustomField>