force-app/main/default/objects/df_journal_dk__c/fields/nskes_pensionsdeling__c.field-meta.xml
<CustomField>
    <fullName>nskes_pensionsdeling__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ønskes pensionsdeling?</label>
    <type>Checkbox</type>
</CustomField>