force-app/main/default/objects/df_journal_dk__c/fields/omfatt_pens_forsik__c.field-meta.xml
<CustomField>
    <fullName>omfatt_pens_forsik__c</fullName>
    <label>Omfattede pensions- og forsikrin 44e19</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>omfatt_pens_forsik_generelt</fullName>
                <label>Generelt</label>
            </value>
            <value>
                <fullName>omfatt_pens_forsik_specif</fullName>
                <label>Specifikt</label>
            </value>
            <value>
                <fullName>omfatt_pens_forsik_overskud</fullName>
                <label>Overskudsdeling</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>