force-app/main/default/objects/df_journal_dk__c/fields/organisation_30_procent_reglen__c.field-meta.xml
<CustomField>
    <fullName>organisation_30_procent_reglen__c</fullName>
    <label>Organisation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>