force-app/main/default/objects/df_journal_dk__c/fields/organisationens_adresse_30_proce_180__c.field-meta.xml
<CustomField>
    <fullName>organisationens_adresse_30_proce_180__c</fullName>
    <label>Organisationens adresse ff8dc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>