force-app/main/default/objects/df_journal_dk__c/fields/overtagelsesdato__c.field-meta.xml
<CustomField>
    <fullName>overtagelsesdato__c</fullName>
    <description>Datoen hvor i fik ejerskab over boligen</description>
    <label>Overtagelsesdato</label>
    <type>DateTime</type>
</CustomField>