force-app/main/default/objects/df_journal_dk__c/fields/p1_indst_speci_pens__c.field-meta.xml
<CustomField>
    <fullName>p1_indst_speci_pens__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Skal indeholde pensions- og/elle 6f79e</label>
    <type>Checkbox</type>
</CustomField>