force-app/main/default/objects/df_journal_dk__c/fields/p2_indst_speci_pens__c.field-meta.xml
<CustomField>
    <fullName>p2_indst_speci_pens__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Skal indeholde pensions- og/elle bab73</label>
    <type>Checkbox</type>
</CustomField>