force-app/main/default/objects/df_journal_dk__c/fields/person_1_address__c.field-meta.xml
<CustomField>
    <fullName>person_1_address__c</fullName>
    <description>Person 1 adresse</description>
    <label>Adresse (Person 1)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>