force-app/main/default/objects/df_journal_dk__c/fields/person_1_aktier_eller_opsparing__c.field-meta.xml
<CustomField>
    <fullName>person_1_aktier_eller_opsparing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Aktier eller opsparing (Person 1 d67f2</label>
    <type>Checkbox</type>
</CustomField>