force-app/main/default/objects/df_journal_dk__c/fields/person_1_alder__c.field-meta.xml
<CustomField>
    <fullName>person_1_alder__c</fullName>
    <label>Alder (Person 1)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>