force-app/main/default/objects/df_journal_dk__c/fields/person_1_city__c.field-meta.xml
<CustomField>
    <fullName>person_1_city__c</fullName>
    <description>Person by</description>
    <label>By (Person 1)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>