force-app/main/default/objects/df_journal_dk__c/fields/person_1_country__c.field-meta.xml
<CustomField>
    <fullName>person_1_country__c</fullName>
    <label>Land</label>
    <length>255</length>
    <type>Text</type>
</CustomField>