force-app/main/default/objects/df_journal_dk__c/fields/person_1_cpr__c.field-meta.xml
<CustomField>
    <fullName>person_1_cpr__c</fullName>
    <description>Person 1 CPR</description>
    <label>CPR nummer (Person 1)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>