force-app/main/default/objects/df_journal_dk__c/fields/person_1_ejendom__c.field-meta.xml
<CustomField>
    <fullName>person_1_ejendom__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ejendom? (Person 1)</label>
    <type>Checkbox</type>
</CustomField>