force-app/main/default/objects/df_journal_dk__c/fields/person_1_first_name__c.field-meta.xml
<CustomField>
    <fullName>person_1_first_name__c</fullName>
    <description>Person 1 fornavn og evt. mellemnavn(e)</description>
    <label>Fornavn (Person 1)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>