force-app/main/default/objects/df_journal_dk__c/fields/person_1_zip_code__c.field-meta.xml
<CustomField>
    <fullName>person_1_zip_code__c</fullName>
    <description>Person 1 postnummer</description>
    <label>Postnummer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>