force-app/main/default/objects/df_journal_dk__c/fields/person_2_address__c.field-meta.xml
<CustomField>
    <fullName>person_2_address__c</fullName>
    <description>Person 2 Adresse</description>
    <label>Adresse</label>
    <length>255</length>
    <type>Text</type>
</CustomField>