force-app/main/default/objects/df_journal_dk__c/fields/person_2_aktier_eller_opsparing__c.field-meta.xml
<CustomField>
    <fullName>person_2_aktier_eller_opsparing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Aktier eller opsparing</label>
    <type>Checkbox</type>
</CustomField>