force-app/main/default/objects/df_journal_dk__c/fields/person_2_bil__c.field-meta.xml
<CustomField>
    <fullName>person_2_bil__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bil</label>
    <type>Checkbox</type>
</CustomField>