force-app/main/default/objects/df_journal_dk__c/fields/person_2_city__c.field-meta.xml
<CustomField>
    <fullName>person_2_city__c</fullName>
    <description>Person 2 by</description>
    <label>By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>