force-app/main/default/objects/df_journal_dk__c/fields/person_2_cpr__c.field-meta.xml
<CustomField>
    <fullName>person_2_cpr__c</fullName>
    <description>Person 2 CPR</description>
    <label>CPR nummer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>