force-app/main/default/objects/df_journal_dk__c/fields/person_2_email__c.field-meta.xml
<CustomField>
    <fullName>person_2_email__c</fullName>
    <description>Person 2 email adresse</description>
    <label>Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>