force-app/main/default/objects/df_journal_dk__c/fields/person_2_internal_notes__c.field-meta.xml
<CustomField>
    <fullName>person_2_internal_notes__c</fullName>
    <description>Interne noter vedr. person 2</description>
    <label>Interne noter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>