force-app/main/default/objects/df_journal_dk__c/fields/person_2_last_name__c.field-meta.xml
<CustomField>
    <fullName>person_2_last_name__c</fullName>
    <description>Person 2 efternavn</description>
    <label>Efternavn</label>
    <length>255</length>
    <type>Text</type>
</CustomField>