force-app/main/default/objects/df_journal_dk__c/fields/person_2_phone__c.field-meta.xml
<CustomField>
    <fullName>person_2_phone__c</fullName>
    <description>Person 2 telefonnummer</description>
    <label>Telefon</label>
    <length>255</length>
    <type>Text</type>
</CustomField>