force-app/main/default/objects/df_journal_dk__c/fields/personlige_forhold_person2__c.field-meta.xml
<CustomField>
    <fullName>personlige_forhold_person2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Personlige forhold</label>
    <type>Checkbox</type>
</CustomField>